    - added support for object method access (Monte)
    - fixed bug with directories named '0' (Frank Bauer, Monte)
    - add javascript parameter to escape modifier (Monte)
    - added correct line numbers to syntax error messages
      in compiler (Monte)
    - added support for modifiers to function calls (Monte)
    - support return value for custom functions (Monte)
    - can access constants via $smarty.const.FOO (Monte)
    - cleaned up regex code in compiler (Monte)
    - can now pass modifiers to static content (Monte)
    - fix up regex code in compiler, more flexible and
      maintainable (Monte)
    - added day_value_format to html_select_date (Marcus
      Bointon, Monte)
    - assigned variables are no longer in global
      namespace, saving extract() calls and speeding
      up fetch() and display() linearly with no. of
      assigned variables (Monte)
    - added trimwhitespace output filter to dist. (Monte)
    - fix popup function to allow newlines in text (Monte)
    - escape html entities in html_options (Monte)
    - fixed bug with label for html_options (Monte)
    - added caching to config file loading (Monte)
    - added "extra" parameter to mailto function (Monte,
      Massimiliano Perantoni)
    - added mailto plugin to dist.  (Monte)

Version 2.3.1
-------------

    - added optgroup support to html_options (Monte, Robert
      Amos)
    - set mtime on compile files so they match source
      files (Monte, Peter Bowen)
    - added proper support for open_basedir setting
      (Monte, Alessandro Astarita)
    - added strip variable modifier, updated docs (Monte)
    - fixed access to $smarty.x variables as arrays. (Andrei)
    - fixed errors with example setup docs (Monte, Matthew
      Hagerty)
    - added textformat block function (Monte)

Version 2.3.0
-------------

    - added assign_by_ref() and append_by_ref() functions
      (Bob Silva, Monte)
    - changed default warning type for plugin errors from